# DeclarationApi

./: README.md  pyproject.toml  requirements.txt
declaration_api/: manage.py
declaration_api/api/: models.py  parser.py  selenium_parser.py  urls.py  views.py
declaration_api/api/static/css/: styles.css
declaration_api/api/templates/api/: base.html  index.html  load_data.html  login.html  profile.html  register.html
declaration_api/declaration_api/: asgi.py  settings.py  urls.py  wsgi.py
